Preventing map scrolling on mobile

--- a/frontend/src/css/home.css
+++ b/frontend/src/css/home.css
@@ -53,6 +53,13 @@ a > span
     border: solid 3px;
     padding: 8px;
 }
+.mapCta
+{
+    z-index: 1;
+    left: 50%;
+    transform: translateX(-50%);
+    display: none;
+}
 .sidebar
 {
     border-radius: 5px !important;
@@ -78,7 +85,7 @@ a > span
     {
         margin-top: 25% !important;
     }
-        .onTheRoad
+    .onTheRoad
     {
         font-size: 40px;
     }
@@ -107,6 +114,10 @@ a > span
         transform: unset;
         bottom: 0;
         margin-bottom: 25%;
+    }
+    .mapCta
+    {
+        display: block;
     }
     
 }
